Fix incorrect header spacing

--- a/src/stylesheets/pages/landing.scss
+++ b/src/stylesheets/pages/landing.scss
@@ -458,7 +458,7 @@
         }
 
         .introduce-headline {
-          margin-top: 12px;
+          margin-top: 6px;
         }
 
         .team-showcase {
